<resources>
    <string name="app_name">ChatRobot</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="acount">请输入密码</string>
    <string name="login">登录</string>
    <string name="code">请输入账号</string>
    <string name="call">Call</string>
    <string name="friends">Friends</string>
    <string name="location">Location</string>
    <string name="mail">Mail</string>
    <string name="settings">Settings</string>
    <string name="hint">请输入内容...</string>
    <string name="send">发送</string>
    <string name="_331063594_qq_com">331063594@qq.com</string>
    <string name="name">郑伟知足常乐</string>
    <string name="clear">清空聊天数据</string>
    <string name="cancel">取消</string>
    <string name="change_robot">机器人换头像</string>
</resources>
